Fixing files bugs in laptop

--- a/0 - Set up  VS Code/test.html
+++ b/0 - Set up  VS Code/test.html
@@ -8,11 +8,8 @@
 </head>
 <body>
     hola perros
-
-<span>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Animi, earum, veritatis optio libero incidunt dicta aut atque in nisi architecto officia magni eos sit ullam saepe eum dolores cupiditate. Dolore ut dicta, unde saepe molestias reprehenderit magnam minima quod soluta.
-
-</span>    
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam fuga tempore quo laudantium quidem dolores repudiandae ipsa debitis maiores ea quos ex asperiores eligendi nihil facilis sapiente possimus, consectetur porro maxime esse. Aliquam iusto nostrum veritatis pariatur quibusdam saepe.
+<class>xdxd  </class>
 
 
 </body>
